--- a/README.org
+++ b/README.org
@@ -3,7 +3,7 @@
   This repository is intended to capture my notes and various bits of software I write to help my Methodist church's Lay
   Leadership committee.
 
-  In a Methodist church, the Lay Leadership committee is a committee comprised of lay members and led by one of the
+  In a United Methodist church, the Lay Leadership committee is a committee comprised of lay members and led by one of the
   clergy (head pastor?) whose job is to recruit other lay members to server on all church committees.  It's kind of a
   recruiting/HR/sales activity.
 
