--- a/README.org
+++ b/README.org
@@ -4,7 +4,7 @@
   Leadership committee.
 
   In a United Methodist church, the Lay Leadership committee is a committee comprised of lay members and led by one of the
-  clergy (head pastor?) whose job is to recruit other lay members to server on all church committees.  It's kind of a
+  clergy (head pastor?) whose job is to recruit other lay members to serve on all church committees.  It's kind of a
   recruiting/HR/sales activity.
 
   (A quick note on the license: I understand that, without a license, software really can't be used at all, from a legal
