--- a/ExcelConverter/README.org
+++ b/ExcelConverter/README.org
@@ -144,7 +144,7 @@
 
 ** Run
 
-  : java -Djava.util.logging.config.file=logging.properties -jar <jarFileName> [options]
+  : java -Djava.util.logging.config.file=logging.properties -jar <jarFileName> --nogui [options]
 
   Note the -D logging config option gives problems in PowerShell.  You can leave it out, but the logging will only use
   default config.
@@ -159,10 +159,13 @@
        prompt:
     
     #+BEGIN_SRC bash
-    java -jar /path/to/excel-converter-1.0-SNAPSHOT.jar -f "original input.xlsx" --xlsx "reformatted output.xlsx"
+      java -jar /path/to/excel-converter-1.0-SNAPSHOT.jar --nogui -f "original input.xlsx" --xlsx "reformatted output.xlsx" > excel-converter.log 2>&1
     #+END_SRC
 
     If you're on Windows, use backslashes (\) instead of forward slashes.
+
+    The "~> filename.log 2>&1~" part ensures that all messages, warning, and errors are captured
+    in the specified text file.  You can print that file out or email to someone.
     
 * Logger Format
 
