Hiding the stupid config screen; TreeView is too complex.
This is just a short-term hack right now, and developing a fancy
GUI in JavaFX, no matter how much better than Swing it is, is just
wasted effort, given that the web is where it's at.

--- a/ExcelConverter/README.org
+++ b/ExcelConverter/README.org
@@ -265,6 +265,7 @@
 * TreeView
 
   - /activityName/ -- String
+    - ~activityType~ -- 
     - ~startDateField~ -- String; /dropdown containing field names, e.g., "Element [1234]"/
 
 * COMMENT JML (Java Modeling Language for assertions)
